--- a/ch04/CopyConstructor2/CopyConstructor2/CopyConstructor2.vcxproj
+++ b/ch04/CopyConstructor2/CopyConstructor2/CopyConstructor2.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{5bdc4b3f-1395-41a8-8cd9-063fa7c6b77e}</ProjectGuid>
+    <ProjectGuid>{81e66bef-34ce-4232-8132-908ecc6926bc}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BadShallowCopy</RootNamespace>
+    <RootNamespace>CopyConstructor2</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -157,7 +157,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="BadShallowCopy.cpp" />
+    <ClCompile Include="CopyConstructor2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
